--- a/styles/table.css
+++ b/styles/table.css
@@ -19,10 +19,9 @@ table tr:last-child td:first-child {
 table {
     width: 80%;
     height: 80%;
-    /* border: 1px solid black; */
     border-collapse: separate;
     border-spacing: 0px;
-    margin: 2% auto;
+    margin: 5rem auto;
     border-radius: 1em;
 }
 
@@ -30,9 +29,8 @@ th,
 td {
     width: fit-content;
     text-align: center;
-    margin: 1em;
     font-size: 1.25em;
-    /* padding: 2%; */
+    padding: 0.25em;
     border: 1px solid black;
 }
 
